src/test/deca/context/invalid/created/return_value_wrongType/return_FLOAT_wrong_type.deca
// Description:
//		Methode renvoyant un type different que celui attendu
// Resultat:
// 		Erreur contexte Ligne 8 : Types don't match!

class A {
	float value() {
		return(true);
	}
}
